Fix: menu still visible on medium size (tablet)

--- a/pub/btcs.css
+++ b/pub/btcs.css
@@ -66,7 +66,7 @@ nav ul li.selected {
       width: 100%;
       z-index:9999;
    }
-   header .hdr .hdr_inner { margin: auto; width: 950px; }
+   header .hdr .hdr_inner { margin: auto; max-width: 950px; }
 
    header.below .hdr { position:fixed; top:0; margin-top: 0;}
 
